[package]
name = "mavlink-gcs-rust"
version = "0.2.0"
edition = "2024"

[dependencies]
mavlink = { version = "0.14", features = ["ardupilotmega", "udp", "tcp", "direct-serial"] }
eframe = "0.31"
egui = "0.31"
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-app = "0.23"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
image = "0.25"
